--- a/app/resources/en/translation/deceased/divorcedate.json
+++ b/app/resources/en/translation/deceased/divorcedate.json
@@ -1,6 +1,6 @@
 {
-  "title": "Do you know the date the divorce or dissolution took place?",
-  "question": "Do you know the date the divorce or dissolution took place?",
+  "title": "Do you know the date the {legalProcess} took place?",
+  "question": "Do you know the date the {legalProcess} took place?",
   "paragraph1": "You can find the date on the decree absolute or final order.",
   "paragraph2": "If you do not have this, you can <a href=\"https://www.gov.uk/copy-decree-absolute-final-order\" class=\"govuk-link\" target=\"_blank\" aria-label=\"get an official copy of the decree absolute or final order (opens in a new tab)\">get an official copy of the decree absolute or final order (opens in a new tab)</a>.",
   "optionYes": "Yes, I know the date",
@@ -9,33 +9,33 @@
   "dayName": "Day",
   "monthName": "Month",
   "yearName": "Year",
-  "date": "Date of divorce or dissolution",
+  "date": "Date of {legalProcess}",
   "errors": {
     "divorceDateKnown": {
-      "required": "Select &lsquo;yes&rsquo; if you know the date of the divorce or dissolution"
+      "required": "Select &lsquo;yes&rsquo; if you know the date of the {legalProcess}"
     },
     "divorceDate-year": {
-      "required": "Date of divorce or dissolution must include a year"
+      "required": "Date of {legalProcess} must include a year"
     },
     "divorceDate-month": {
-      "required": "Date of divorce or dissolution must include a month"
+      "required": "Date of {legalProcess} must include a month"
     },
     "divorceDate-day": {
-      "required": "Date of divorce or dissolution must include a day"
+      "required": "Date of {legalProcess} must include a day"
     },
     "divorceDate-day-month": {
-      "required": "Date of divorce or dissolution must include a day and month"
+      "required": "Date of {legalProcess} must include a day and month"
     },
     "divorceDate-month-year": {
-      "required": "Date of divorce or dissolution must include a month and year"
+      "required": "Date of {legalProcess} must include a month and year"
     },
     "divorceDate-day-year": {
-      "required": "Date of divorce or dissolution must include a day and year"
+      "required": "Date of {legalProcess} must include a day and year"
     },
     "divorceDate": {
-      "required": "Enter the date the divorce or dissolution took place",
-      "future": "The date of divorce or dissolution must be before {deceasedName}’s date of death",
-      "invalid": "Date of divorce or dissolution must be a real date"
+      "required": "Enter the date the {legalProcess} took place",
+      "future": "The date of {legalProcess} must be before {deceasedName}’s date of death",
+      "invalid": "Date of {legalProcess} must be a real date"
     }
   }
 }
