--- a/app/resources/en/translation/deceased/divorceplace.json
+++ b/app/resources/en/translation/deceased/divorceplace.json
@@ -1,12 +1,12 @@
 {
-  "title": "Did the divorce or dissolution take place in England or Wales?",
-  "question": "Did the divorce or dissolution take place in England or Wales?",
+  "title": "Did the {legalProcess} take place in England or Wales?",
+  "question": "Did the {legalProcess} take place in England or Wales?",
   "optionYes": "Yes",
   "optionNo": "No",
 
   "errors": {
     "divorcePlace": {
-      "required": "Select &lsquo;Yes&rsquo; if the divorce or dissolution took place in England or Wales"
+      "required": "Select &lsquo;Yes&rsquo; if the {legalProcess} took place in England or Wales"
     }
   }
 }
