--- a/app/resources/cy/translation/deceased/divorcedate.json
+++ b/app/resources/cy/translation/deceased/divorcedate.json
@@ -1,6 +1,6 @@
 {
-  "title": "A ydych yn gwybod y dyddiad pan ddigwyddodd yr ysgariad neu’r diddymiad?",
-  "question": "A ydych yn gwybod y dyddiad pan ddigwyddodd yr ysgariad neu’r diddymiad?",
+  "title": "A ydych yn gwybod y dyddiad pan ddigwyddodd yr {legalProcess}?",
+  "question": "A ydych yn gwybod y dyddiad pan ddigwyddodd yr {legalProcess}",
   "paragraph1": "Gallwch ddod o hyd i’r dyddiad ar y dyfarniad absoliwt neu’r gorchymyn terfynol.",
   "paragraph2": "Os nad oes gennych chi hwn, gallwch <a href=\"https://www.gov.uk/copy-decree-absolute-final-order\" class=\"govuk-link\" target=\"_blank\" aria-label=\"gael copi swyddogol o’r dyfarniad absoliwt neu’r gorchymyn terfynol (yn agor mewn tab newydd)\">gael copi swyddogol o’r dyfarniad absoliwt neu’r gorchymyn terfynol (yn agor mewn tab newydd)</a>.",
   "optionYes": "Ydw, dw i’n gwybod beth yw’r dyddiad",
@@ -9,33 +9,33 @@
   "dayName": "Diwrnod",
   "monthName": "Mis",
   "yearName": "Blwyddyn",
-  "date": "Dyddiad yr ysgariad neu’r diddymiad",
+  "date": "Dyddiad yr {legalProcess}",
   "errors": {
     "divorceDateKnown": {
-      "required": "Dewiswch &lsquo;ydw&rsquo; os ydych yn gwybod y dyddiad yr ysgariad neu’r diddymiad"
+      "required": "Dewiswch &lsquo;ydw&rsquo; os ydych yn gwybod y dyddiad yr {legalProcess}"
     },
     "divorceDate-year": {
-      "required": "Rhaid i ddyddiad yr ysgariad neu ddiddymiad gynnwys blwyddyn"
+      "required": "Rhaid i ddyddiad yr {legalProcess} gynnwys blwyddyn"
     },
     "divorceDate-month": {
-      "required": "Rhaid i ddyddiad y ysgariad neu ddiddymiad gynnwys mis"
+      "required": "Rhaid i ddyddiad y {legalProcess} gynnwys mis"
     },
     "divorceDate-day": {
-      "required": "Rhaid i ddyddiad yr ysgariad neu’r diddymiad gynnwys diwrnod"
+      "required": "Rhaid i ddyddiad yr {legalProcess} gynnwys diwrnod"
     },
     "divorceDate-day-month": {
-      "required": "Rhaid i ddyddiad yr ysgariad neu ddiddymiad gynnwys diwrnod a mis"
+      "required": "Rhaid i ddyddiad yr {legalProcess} gynnwys diwrnod a mis"
     },
     "divorceDate-month-year": {
-      "required": "Rhaid i ddyddiad yr ysgariad neu ddiddymiad gynnwys mis a blwyddyn"
+      "required": "Rhaid i ddyddiad yr {legalProcess} gynnwys mis a blwyddyn"
     },
     "divorceDate-day-year": {
-      "required": "Rhaid i ddyddiad yr ysgariad neu ddiddymiad gynnwys diwrnod a blwyddyn"
+      "required": "Rhaid i ddyddiad yr {legalProcess} gynnwys diwrnod a blwyddyn"
     },
     "divorceDate": {
-      "required": "Nodwch y dyddiad pan ddigwyddodd yr ysgariad neu’r diddymiad",
-      "future": "Rhaid i ddyddiad yr ysgariad neu ddiddymiad fod cyn dyddiad marwolaeth {deceasedName}",
-      "invalid": "Rhaid i ddyddiad yr ysgariad neu ddiddymiad fod yn ddyddiad dilys"
+      "required": "Nodwch y dyddiad pan ddigwyddodd yr {legalProcess}",
+      "future": "Rhaid i ddyddiad yr {legalProcess} fod cyn dyddiad marwolaeth {deceasedName}",
+      "invalid": "Rhaid i ddyddiad yr {legalProcess} fod yn ddyddiad dilys"
     }
   }
 }
