--- a/app/resources/cy/translation/deceased/maritalstatus.json
+++ b/app/resources/cy/translation/deceased/maritalstatus.json
@@ -7,8 +7,8 @@
   "optionNotMarried": "Erioed wedi priodi",
   "optionSeparated": "Ymwahaniad cyfreithiol",
   "hintTextMarried": "Rhaid bod partneriaeth sifil wedi’i chofrestru ac mae’n wahanol i fyw gyda’ch gilydd fel partneriaid",
-  "divorce": "wedi ysgaru",
-  "separation": "wedi gwahanu",
+  "divorce": "ysgariad neu’r diddymiad",
+  "separation": "ymwahaniad cyfreithiol",
   "theDeceased": "yr unigolyn sydd wedi marw",
 
   "errors": {
