--- a/app/resources/en/translation/applicant/phone.json
+++ b/app/resources/en/translation/applicant/phone.json
@@ -1,12 +1,15 @@
 {
   "title": "Applicant phone number",
   "question": "What is your phone number?",
+  "content1": "We will usually send you an email or a letter if we have any questions about your application, but may use this number to contact you otherwise.",
+  "content2": "For international numbers include the country code.",
   "phoneNumber": "Phone number",
+  "hint": "For example, 07700900900 or +39133457090",
 
   "errors": {
     "phoneNumber": {
-      "required": "Enter a phone number",
-      "invalid": "Enter a valid phone number"
+      "required": "Enter your phone number",
+      "invalid": "Enter a phone number in the correct format"
     }
   }
 }
