--- a/app/resources/cy/translation/applicant/name.json
+++ b/app/resources/cy/translation/applicant/name.json
@@ -3,19 +3,19 @@
   "question": "Beth yw eich enw llawn?",
   "content1": "Bydd yr enw a roddwch inni yn cael ei ysgrifennu ar y grant profiant.",
   "content2": "Dylai eich enw fod union yr un fath ag y mae wedi’i ysgrifennu ar eich pasbort neu fath arall o ddogfen adnabod awdurdodedig, er enghraifft trwydded yrru.",
-  "content3": "Dylech wneud yn siŵr mai dyma’r un math o brawf adnabod a ddefnyddiwch pan fyddwch yn delio ag ystad yr unigolyn sydd wedi marw.",
+  "content3": "Dylech sicrhau mai hwn yw’r un math o brawf adnabod byddwch yn ei ddefnyddio pan fyddwch yn delio ag ystad {deceasedName}.",
   "firstName": "Enw cyntaf ac unrhyw enwau canol",
   "lastName": "Cyfenw",
   "warningText": "Os nad yw’r enw ar y grant yn cyfateb i’r prawf adnabod a ddefnyddiwch, efallai y cewch anawsterau wrth ddelio â’r ystad.",
 
   "errors": {
     "firstName": {
-      "required": "Nodwch eich enw cyntaf, gan gynnwys unrhyw enwau canol",
-      "invalid": "Rhowch enw cyntaf dilys - dim ond llythrennau a i z, bylchau, cysylltnodau a chollnodau y gellir eu cynnwys"
+      "required": "Nodwch eich enw cyntaf ac unrhyw enwau canol",
+      "invalid": "Rhaid i’r enw cyntaf ond cynnwys llythrennau o a i z, a nodau arbenning fel cysylltnodau, bylchau a chollnodau"
     },
     "lastName": {
       "required": "Nodwch eich cyfenw",
-      "invalid": "Rhowch enw olaf dilys - dim ond llythrennau a i z, bylchau, cysylltnodau a chollnodau y gellir eu cynnwys"
+      "invalid": "Rhaid i’r cyfenw ond cynnwys llythrennau o a i z, a nodau arbenning fel cysylltnodau, bylchau a chollnodau"
     }
   }
 }
