--- a/app/resources/en/translation/applicant/name.json
+++ b/app/resources/en/translation/applicant/name.json
@@ -3,19 +3,19 @@
   "question": "What is your full name?",
   "content1": "The name you give us will be written on the grant of probate.",
   "content2": "Your name should match exactly what is written on your passport or other official identification document, such as a driving licence.",
-  "content3": "You should make sure that this is the same form of identification you use when you are dealing with the estate of the person who died.",
+  "content3": "You should make sure that this is the same form of identification you use when you are dealing with {deceasedName}'s estate.",
   "firstName": "First name and any middle names",
   "lastName": "Last name",
   "warningText": "If the name on the grant does not match the identification you use, you may have difficulties dealing with the estate.",
 
   "errors": {
     "firstName": {
-      "required": "Enter your first name, including any middle names",
-      "invalid": "Enter a valid first name - can only contain letters a to z, spaces, hyphens and apostrophes"
+      "required": "Enter your first name and any middle names",
+      "invalid": "First name must only include letters a to z, and special characters such as hyphens, spaces and apostrophes"
     },
     "lastName": {
       "required": "Enter your last name",
-      "invalid": "Enter a valid last name - can only contain letters a to z, spaces, hyphens and apostrophes"
+      "invalid": "Last name must only include letters a to z, and special characters such as hyphens, spaces and apostrophes"
     }
   }
 }
