--- a/app/resources/en/translation/applicant/address.json
+++ b/app/resources/en/translation/applicant/address.json
@@ -4,13 +4,13 @@
   "explanation1": "We will send the grant of probate to this address.",
   "postTown": "Town or city",
   "postcode": "UK Postcode",
-  "country": "Country (optional)",
+  "country": "Country",
   "findAddress": "Find UK address",
   "addressLabel": "Address Line 1",
   "addressLabel2": "Address Line 2 (optional)",
   "addressLabel3": "Address Line 3 (optional)",
   "selectAddress": "Select address",
-  "enterManually": "Enter your address instead",
+  "enterManually": "Enter an address instead",
 
   "errors": {
     "addressLine1": {
@@ -18,12 +18,15 @@
       "invalid": "Enter an address line that is 2-150 characters long"
     },
     "postTown": {
-      "required": "Enter a town or city",
+      "required": "Enter town or city",
       "invalid": "Enter a post town that is 2-50 characters long"
     },
     "newPostCode": {
-      "required": "Enter a postcode",
+      "required": "Enter postcode",
       "invalid": "Enter a postcode that is 2-14 characters long"
+    },
+    "country": {
+      "required": "Enter country"
     }
   }
 }
