add missing 'or' in new options, make existing 'or' translate.

--- a/app/resources/cy/translation/applicant/relationshiptodeceased.json
+++ b/app/resources/cy/translation/applicant/relationshiptodeceased.json
@@ -12,6 +12,7 @@
   "optionSibling": "Fi yw eu brawd/chwaer",
   "hintSibling": "Gan gynnwys brodyr/chwiorydd mabwysiedig, ond nid llysfrodyr/llyschwiorydd",
   "optionOther": "Arall",
+  "or": "neu",
 
   "errors": {
     "relationshipToDeceased": {
