DTSPB-4689 Fix tests

--- a/app/resources/cy/translation/deceased/dod.json
+++ b/app/resources/cy/translation/deceased/dod.json
@@ -5,6 +5,7 @@
   "dayName": "Diwrnod",
   "monthName": "Mis",
   "yearName": "Blwyddyn",
+  "theDeceased": "yr unigolyn sydd wedi marw",
 
   "errors": {
     "dod-day": {
