--- a/app/resources/cy/translation/stoppage.json
+++ b/app/resources/cy/translation/stoppage.json
@@ -29,5 +29,6 @@
   "grandchildrenUnder18": "Ni allwch ddefnyddio&rsquo;r gwasanaeth ar-lein os bydd plant dan 18oed yn cael rhan o&rsquo;r ystad. Mae angen i blant dan 18oed gael eu cynrychioli gan rywun fydd yn gwneud y cais ar eu rhan.</p><p class=\"govuk-body\">Yn hytrach, bydd angen ichi wneud cais drwy&rsquo;r post. Llenwch <a target=\"_blank\" rel=\"external noopener\" href=\"{applicationFormPA1A}\" class=\"govuk-link\" aria-label=\"ffurflen PA1A (yn agor mewn tab newydd)\">ffurflen PA1A (yn agor mewn tab newydd)</a>.",
   "relToDecMarriedOther": "WELSH for relToDecMarriedOther for {deceasedName} (repeat {deceasedName}).",
   "relToDecMarriedOtherHeader": "Nid oes gennych hawl i wneud cais",
-  "relToDecUnmarriedOther": "WELSH for relToDecUmmarriedOther for {deceasedName} (repeat {deceasedName})."
+  "relToDecUnmarriedOther": "WELSH for relToDecUmmarriedOther for {deceasedName} (repeat {deceasedName}).",
+  "relToDecUnmarriedOtherHeader": "Ni allwch wneud cais am brofiant ar-lein"
 }
