Dtspb 4523 hmrc remove legacy journey (#2616)
* DTSPB-4523 Remove HMRC legacy journey

* DTSPB-4523 Remove HMRC legacy journey

* DTSPB-4523 Changed Welsh text

* DTSPB-4523 Changed e2e

* DTSPB-4523 Content changes for excepted estate

* DTSPB-4523 Fix component test

* DTSPB-4523 Fix e2e

* DTSPB-4523 Added CTS to the hint text

* DTSPB-4523 changed net value content for IHT400

* DTSPB-4523 Fix issue

* DTSPB-4523 Fix issue on check your answers page

* DTSPB-4523 Fix test

* DTSPB-4523 Changed back link

* DTSPB-4523 Updated Welsh text

* DTSPB-4523 Updated Welsh error id

---------

Co-authored-by: Feli Tam <feli.tam@justice.gov.uk>

--- a/app/resources/en/translation/iht/probateestatevalues.json
+++ b/app/resources/en/translation/iht/probateestatevalues.json
@@ -1,7 +1,7 @@
 {
   "title": "What are the values of the estate you entered on IHT form?",
   "question207": "What are the values of the estate you entered on form IHT207?",
-  "question205": "What are the values of the estate you entered on form IHT205?",
+  "question205": "What are the values of the estate?",
   "question421": "What are the values of the estate you entered on form IHT421?",
   "question400": "What are the values of assets for probate?",
   "questionNoIHT": "What are the values of the estate for probate?",
@@ -11,7 +11,7 @@
   "hint205part2": "The values you enter must be whole numbers, and must not include decimals, full stops and commas. For example 25000, not 25,000.",
   "hint421part1": "You can find these values on the completed IHT421 form.",
   "hint421part2": "The values you enter must be whole numbers, and must not include decimals, full stops and commas. For example 25000, not 25,000.",
-  "hint400part1": "You can find these values in the letter HMRC sent you.",
+  "hint400part1": "You can find these values in the letter or email HMRC sent you.",
   "hint400part2": "The values you enter must be whole numbers, and must not include decimals, full stops and commas. For example 25000, not 25,000.",
   "hintNoIHTPart1": "The values of the estate for probate are separate from the Inheritance Tax values, though in some cases the figures may be the same.",
   "hintNoIHTPart2": "These figures will be used on the grant of probate when it is issued.",
@@ -24,7 +24,7 @@
   "netHint205": "Net value of the estate for probate",
   "netHint207": "Net value of the estate for probate in the UK in &pound;",
   "netHint421": "Net value of the estate for probate",
-  "netHint400": "Net value for probate",
+  "netHint400": "Net value of the estate for probate",
   "netHintNoIHT": "<strong>Net value for probate</strong><br><br>To work this out, start with the gross value for probate you calculated above and take away the total value of any funeral expenses and all debts, owed by the person who died at the time of their death.<br><br>Do not include debts owed jointly with other people, such as a mortgage on a jointly owned property.<br><br>",
   "poundSymbol": "&pound;",
   "grossValueSummary": "Gross value for probate in &pound;",
