--- a/app/resources/en/translation/deceased/allchildrenover18.json
+++ b/app/resources/en/translation/deceased/allchildrenover18.json
@@ -1,14 +1,14 @@
 {
   "title": "All children over 18",
-  "question": "Are all of {deceasedName}&rsquo;s children over 18?",
-  "hint": "You should include all children under 18, even if they have been adopted by another family.",
+  "question": "Are all of {deceasedName}&rsquo;s children 18 or older?",
+  "paragraph": "You do not need to include any children that died after {deceasedName}.",
   "optionYes": "Yes",
   "optionNo": "No",
   "theDeceased": "the deceased",
 
   "errors": {
     "allChildrenOver18": {
-      "required": "Answer &lsquo;yes&rsquo; if all the children are over 18"
+      "required": "Select &lsquo;yes&rsquo; if all of the children are 18 or older"
     }
   }
 }
