DTSPB-4717: Update phone numbers per GDS spec and ensure they exist in a reserved block

--- a/app/resources/cy/translation/executors/contactdetails.json
+++ b/app/resources/cy/translation/executors/contactdetails.json
@@ -5,7 +5,7 @@
   "paragraph2": "Mae&rsquo;n rhaid i chi ddarparu eu cyfeiriad e-bost cyfredol a&rsquo;u rhif ff&ocirc;n symudol. Ar gyfer rhifau rhyngwladol, nodwch god y wlad.",
   "email": "Cyfeiriad e-bost",
   "mobile": "Rhif ff&ocirc;n symudol",
-  "mobileHint": "Er enghraifft, 07700900900 neu +39133457090",
+  "mobileHint": "Er enghraifft, 07700 900 900 neu +61 491 576 801",
 
   "errors": {
     "email": {
