--- a/app/resources/cy/translation/executors/relationshiptodeceased.json
+++ b/app/resources/cy/translation/executors/relationshiptodeceased.json
@@ -1,14 +1,15 @@
 {
-  "title": "Beth yw perthynas y ceisydd arall â {(deceasedName}}?",
-  "hintText": "Yn seiliedig ar yr wybodaeth yr ydych wedi’i rhoi i ni, mae pobl eraill sydd â hawl i etifeddu y gallwch wneud cais gyda nhw.",
+  "title": "Beth yw perthynas y ceisydd arall",
+  "question": "Beth yw perthynas y ceisydd arall &acirc; {deceasedName}?",
+  "hintText": "Yn seiliedig ar yr wybodaeth yr ydych wedi&rsquo;i rhoi i ni, mae pobl eraill sydd &acirc; hawl i etifeddu y gallwch wneud cais gyda nhw.",
   "optionChild": "Plentyn",
-  "optionGrandchild": "Ŵyr/Wyres",
-  "optionGrandchildHintText": "Gall hyn fod drwy unrhyw un o blant {{ deceasedName }} wnaeth farw cyn {{ deceased name }}",
+  "optionGrandchild": "&Wcirc;yr/Wyres",
+  "optionGrandchildHintText": "Gall hyn fod drwy unrhyw un o blant {deceasedName} wnaeth farw cyn {deceasedName}",
   "optionOther": "Arall",
 
   "errors": {
-    "relationshipToDeceased": {
-      "required": "Choose an option for your relationship to the person who died"
+    "coApplicantRelationshipToDeceased": {
+      "required": "Dewiswch beth yw perthynas y ceisydd &acirc; {deceasedName}"
     }
   }
 }
