--- a/app/resources/cy/translation/intcoapplicant/joinapplication.json
+++ b/app/resources/cy/translation/intcoapplicant/joinapplication.json
@@ -1,9 +1,8 @@
 {
   "title": "Pobl yn gwneud cais am brofiant",
-  "titleWithCodicil": "Executors named in the will and any codicils",
   "question": "Ydych chi eisiau gwneud cais gyda rhywun arall?",
-  "hintText": "Os oes pobl eraill sydd â hawl i etifeddu, gallwch wneud cais ar y cyd gyda hyd at 3 ohonynt. \nByddant hefyd yn cael eu henwi ar y grant profiant.",
-  "hintTextDeceasedName": "All applicants will be given the legal right to deal with {{ deceased name }}’s estate. This includes:",
+  "Paragraph1": "Os oes pobl eraill sydd â hawl i etifeddu, gallwch wneud cais ar y cyd gyda hyd at 3 ohonynt. \nByddant hefyd yn cael eu henwi ar y grant profiant.",
+  "Paragraph2": "All applicants will be given the legal right to deal with {{ deceased name }}’s estate. This includes:",
   "bullet1": "casglu asedau'r ystad (eiddo ac arian)",
   "bullet2": "talu unrhyw drethi a dyledion",
   "bullet3": "distributing what is left to the people entitled to it (the ‘beneficiaries’)",
@@ -16,8 +15,7 @@
   "errors": {
     "executorsNamed": {
       "required": "Select 'Yes' if there are more executors named in the will",
-      "requiredCodicils": "Select 'Yes' if there are more executors named in the will and any codicils",
-      "invalid": "Number of executors must be a whole number between 1 and 20"
+      "invalid": "You can only apply with up to 3 other people"
     }
   }
 }
