--- a/app/resources/en/translation/executors/relationshiptodeceased.json
+++ b/app/resources/en/translation/executors/relationshiptodeceased.json
@@ -1,14 +1,15 @@
 {
-  "title": "What is the other applicant’s relationship to {{ deceasedName }}?",
+  "title": "What is the other applicant&rsquo;s relationship to deceased?",
+  "question": "What is the other applicant&rsquo;s relationship to {deceasedName}?",
   "hintText": "Based on the information you have given us, there are other people entitled to inherit who you can apply with.",
   "optionChild": "Child",
   "optionGrandchild": "Grandchild",
-  "optionGrandchildHintText": "This can only be through any of {{ deceasedName }}’s children that died before {{ deceasedName }}",
+  "optionGrandchildHintText": "This can only be through any of {deceasedName}&rsquo;s children that died before {deceasedName}",
   "optionOther": "Other",
 
   "errors": {
-    "relationshipToDeceased": {
-      "required": "Choose an option for your relationship to the person who died"
+    "coApplicantRelationshipToDeceased": {
+      "required": "Select what the applicant&rsquo;s relationship to {deceasedName} is"
     }
   }
 }
