DTSPB-4717: Update phone numbers per GDS spec and ensure they exist in a reserved block

--- a/app/resources/cy/translation/applicant/phone.json
+++ b/app/resources/cy/translation/applicant/phone.json
@@ -4,7 +4,7 @@
   "content1": "Fel arfer byddwn yn anfon e-bost neu lythyr atoch os oes gennym unrhyw gwestiynau am eich cais, ond gallwn ddefnyddio’r rhif hwn i gysylltu gyda chi fel arall.",
   "content2": "Ar gyfer rhifau rhyngwladol, nodwch god y wlad.",
   "phoneNumber": "Rhif ff&ocirc;n",
-  "hint": "Er enghraifft, 07771 900 900 neu +39 1 33 45 70 90",
+  "hint": "Er enghraifft, 07771 900 900 neu +61 491 576 801",
 
   "errors": {
     "phoneNumber": {
