DTSPB-4734: Fix content

--- a/app/resources/en/translation/deceased/deceasedchildalive.json
+++ b/app/resources/en/translation/deceased/deceasedchildalive.json
@@ -1,6 +1,6 @@
 {
   "title": "Child Alive",
-  "question": "Is your parent ({deceasedName}'s child) legally alive?",
+  "question": "Is your parent ({deceasedName}'s child) alive?",
   "optionYes": "Yes",
   "optionNo": "No",
 
