DTSPB-4734: Update child adopted in to display grandchild content if grandchild journey

--- a/app/resources/cy/translation/details/childadoptedin.json
+++ b/app/resources/cy/translation/details/childadoptedin.json
@@ -1,6 +1,7 @@
 {
   "title": "A wnaeth yr unigolyn sydd wedi marw eich mabwysiadau&rsquo;n gyfreithlon i mewn i&rsquo;w teulu nhw?",
-  "question": "A wnaeth {deceasedName} eich mabwysiadau&rsquo;n gyfreithlon i mewn i&rsquo;w teulu nhw?",
+  "childQuestion": "A wnaeth {deceasedName} eich mabwysiadau&rsquo;n gyfreithlon i mewn i&rsquo;w teulu nhw?",
+  "grandchildQuestion": "A wnaeth {deceasedName} fabwysiadu plentyn eich rhiant {{ deceased name }}) yn gyfreithlon?",
   "optionYes": "Do",
   "optionNo": "Naddo",
 
