--- a/app/resources/en/translation/details/childadoptedin.json
+++ b/app/resources/en/translation/details/childadoptedin.json
@@ -1,6 +1,7 @@
 {
   "title": "Child adopted in",
-  "question": "Did {deceasedName} legally adopt you into their family?",
+  "childQuestion": "Did {deceasedName} legally adopt you into their family?",
+  "grandchildQuestion": "Did {deceasedName} legally adopt your parent ({deceasedName}'s child)?",
   "optionYes": "Yes",
   "optionNo": "No",
 
